--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(muza)
 file(GLOB_RECURSE SRC "c/source/*.c")
 add_executable(muza ${SRC})
 target_compile_options(muza PRIVATE -std=gnu23 -Wall -Wextra -Wpedantic)
+target_link_libraries(muza PRIVATE m)
 target_include_directories(muza PRIVATE c/include)
