--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.28)
 project(muza)
-file(GLOB_RECURSE SRC "c/source/*.c")
+file(GLOB_RECURSE SRC "src/*.c")
 add_executable(muza ${SRC})
 target_compile_options(muza PRIVATE -std=gnu23 -Wall -Wextra -Wpedantic)
-target_link_libraries(muza PRIVATE m)
-target_include_directories(muza PRIVATE c/include)
+target_link_libraries(muza PRIVATE m asound pthread)
+target_include_directories(muza PRIVATE inc)
